# AI-Driven-Development_30-Day-Challenge

./: README.md
.devcontainer/: devcontainer.json
Task_04/: GEMINI.md
Task_04/study-agent/: .env  .gitignore  GEMINI.md  README.md  agent.py  app.py  pyproject.toml  requirements.txt  utils.py
Task_04/study-assistant/: .env  .gitignore  README.md  agent.py  app.py  pyproject.toml  requirements.txt  utils.py
