[project]
name = "study-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.6.1",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pypdf>=6.4.0",
    "pytesseract>=0.3.13",
    "streamlit>=1.51.0",
]
